--- a/Resources/views/Messaging/checker.js.twig
+++ b/Resources/views/Messaging/checker.js.twig
@@ -5,15 +5,15 @@
                 url: '{{ path('sansis_has_messages_check') }}'
         }).done(function(data){
             if (data.chk == true) {
-                $('#sansis_mesasage_checker').css({'color' : '#FF0000'});
+                $('#sansis_mesasage_checker').css({'color' : '#FF0000'}).html('(' + data.total + ') Mensagens');
             } else {
-                $('#sansis_mesasage_checker').css({'color' : '#FFFFFF'});
+                $('#sansis_mesasage_checker').css({'color' : '#FFFFFF'}).html('(' + data.total + ') Mensagens');
             }
-            window.setTimeout(sanSISMessagesCheck, 1000);
+            window.setTimeout(sanSISMessagesCheck, 2000);
         });
     }
 
     $(document).ready(function(){
-        // sanSISMessagesCheck()
+        sanSISMessagesCheck();
     });
 </script>
